--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <a href="http://127.0.0.1:5500/PRINCING-TABLE-CYPRESS/form.html" target="_blank"><b>Peça agora</b>
+                                <a href="https://ricardooliver.github.io/PRINCING-TABLE-CYPRESS/" target="_blank"><b>Peça agora</b>
                                 </a>
                             </div>
                         </div>
@@ -114,7 +114,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <a href="http://127.0.0.1:5500/PRINCING-TABLE-CYPRESS/form.html" target="_blank"><b>Peça Agora</b>
+                                <a href="https://ricardooliver.github.io/PRINCING-TABLE-CYPRESS/" target="_blank"><b>Peça Agora</b>
                                 </a>
                             </div>
                         </div>
